--- a/plugin-descriptor.properties
+++ b/plugin-descriptor.properties
@@ -1,6 +1,6 @@
 description=Lemmatizer token filter
-version=${elasticsearch.version}
+version=8.18.3
 name=elasticsearch-analysis-lemmagen
 classname=org.elasticsearch.plugin.analysis.lemmagen.AnalysisLemmagenPlugin
-java.version=1.8
-elasticsearch.version=${plugin.version}
+java.version=17
+elasticsearch.version=8.18.3
